--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "pomodoro",
-  "version": "0.1.0",
+  "name": "pomodoro-desktop",
+  "version": "0.2.0",
   "private": true,
+  "main": "src/electron-starter.js",
   "homepage": "./",
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-dom": "^16.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "dev": "nf start"
+  },
+  "devDependencies": {
+    "electron": "^1.7.10",
+    "foreman": "^2.0.0",
+    "react-scripts": "1.0.17"
   }
 }
